@@ -238,6 +238,7 @@ class phoromatic_welcome implements pts_webui_interface
 					$_SESSION['AccountID'] = $account_id;
 					$_SESSION['AdminLevel'] = $admin_level;
 					$_SESSION['CreatedOn'] = $created_on;
+					$_SESSION['CoreVersionOnSignOn'] = PTS_CORE_VERSION;
 					$account_salt = phoromatic_server::$db->exec('UPDATE phoromatic_users SET LastIP = \'' . $_SERVER['REMOTE_ADDR'] . '\', LastLogin = \'' . phoromatic_server::current_time() . '\' WHERE UserName = "' . $matching_user['UserName'] . '"');
 					session_write_close();
 
