@@ -35,7 +35,7 @@ $URI = substr($_SERVER['REQUEST_URI'], strpos($_SERVER['REQUEST_URI'], '?') + 1)
 $PATH = explode('/', $URI);
 $PAGE_REQUEST = str_replace('.', null, array_shift($PATH));
 
-if($PAGE_REQUEST == 'logout')
+if($PAGE_REQUEST == 'logout' || (isset($_SESSION['AccountID']) && $_SESSION['CoreVersionOnSignOn'] != PTS_CORE_VERSION))
 {
 	unset($_SESSION['UserName']);
 	unset($_SESSION['AccountID']);
