@@ -158,7 +158,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '5.6.0m2');
-pts_define('PTS_CORE_VERSION', 5520);
+pts_define('PTS_CORE_VERSION', 5521);
 pts_define('PTS_CODENAME', 'DEDILOVO');
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
 pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
