@@ -6,6 +6,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Rely on caching for determining pre-existing cached test profiles from the web UI
 - phoromatic: Add result RSS support
 - phoromatic: Add new option to results page
+- phoromatic: Enforce new PTS sign-on whenever the PTS core version changes due to potential interface changes
 
 Phoronix Test Suite 5.6 Milestone 2
 4 February 2015
